--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,7 +1,6 @@
-namespace: counter_indexer_one
-identifier: counter-indexer
+namespace: fuel_nft_indexer
+identifier: fuel-nft-indexer
 abi: ../fuel-nft-indexer/abi/nft-abi.json
 graphql_schema: ../fuel-nft-indexer/schema/schema.graphql
-start_block: 1
 module:
-  wasm: ../fuel-nft-indexer/counter_indexer.wasm
+  wasm: ../fuel-nft-indexer/target/wasm32-unknown-unknown/release/fuel_nft_indexer.wasm
